# DSA

./: CMakeLists.txt  build.sh
0_Common/: CMakeLists.txt
0_Common/include/: comparisons.h  utilities.h
0_Common/src/: comparisons.c  utilities.c
1_Data_Structures/: CMakeLists.txt
1_Data_Structures/include/: adjacency_list.h  array_list.h  linked_list.h  vector.h
1_Data_Structures/src/: adjacency_list.c  array_list.c  linked_list.c  vector.c
src/: adjacency_list.c
